# Parser_from_deribit

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routers/: prices.py
app/api/schemas/: price.py
app/core/: celery_app.py  config.py  database.py
app/domain/models/: __init__.py  price_snapshot.py
app/domain/repositories/: price_repository.py
app/domain/services/: market_data_service.py
app/infrastructure/clients/: deribit_client.py
app/infrastructure/repositories/: price_repository_impl.py
app/tasks/: fetch_prices.py
migrations/: env.py
migrations/versions/: 20260313_01_create_price_snapshots.py
tests/: conftest.py  test_market_data_service.py  test_prices_api.py
