[project]
name = "tz-pr"
version = "0.1.0"
description = ""
authors = [
    {name = "b1zn3",email = "141233108+B1zn3@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "uvicorn[standard] (>=0.30.0,<1.0.0)",
    "celery[redis] (>=5.6.2,<6.0.0)",

]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"